--- a/day_7/ex02/bai02.css
+++ b/day_7/ex02/bai02.css
@@ -104,21 +104,27 @@ html{
 
 }
 
+.login-here input[type="text"]{
+    width: 100%;
+    height: 40px;
+}
+
 .login-here button{
-    width: 87%;
+    width: 100%;
     background-color: #ff574d;
     border: 1px solid #ff574d;
     border-radius: 5px;
     color: white;
     font-size: 0.9rem;
-    height: 30px;
+    height: 40px;
 }
 .remmem-form {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .form-footer {
+    margin-top: 10px;
     display: flex;
     justify-content: center;
 }
