--- a/day_9/ex01/bai1.css
+++ b/day_9/ex01/bai1.css
@@ -1,92 +1,274 @@
-*{
-    margin: 0;
+:root {
+    --distant-from-content-to-line: 25px;
+    --background-img-url: url("https://picsum.photos/200/300")
+}
+
+* {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
-html{
-    font-size: 62.5%;
-    font-family: "Inter", sans-serif;
-}
-
-.col-6{
-    width: calc(100% / 2);
-}
-
-.main{
-    display: flex;
-    justify-content: space-between;
-}
-
-.intro-common{
-    font-size: 1.2rem;
+html {
     font-family: "Space Grotesk", sans-serif;
-    width: calc(100%);
+    font-size: 10px;
+}
+
+.row {
+    display: flex;
+}
+
+
+.col1-3 {
+    width: 33.333%;
+}
+
+.col2-3 {
+    width: 66.6667%;
+}
+
+.col1-2 {
+    width: 50%;
+}
+
+
+.roadmap-section {
+    display: flex;
+    padding-top: 10px;
+}
+
+.timeline-list {
     text-align: right;
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: #767679;
+    list-style-type: none;
 }
 
-.info-text {
-    padding-right: 10px;
-    border-right: 1px solid grey;
-    margin-bottom: 15px;
+.timeline-item {
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding-right: var(--distant-from-content-to-line);
+    width: 80%;
+    max-width: 350px;
 }
 
-.info-time{
-    padding-left: 5px;
-}
-
-.intro-common .info-text{
-    width: 70%;
-}
-.info-common .info-time{
-    width: 30%;
-}
-
-.info-common p{
-    color: gray;
-    font-size: 1rem;
-}
-.info-time p{
-    font-size: 1rem;
-}
-.intro-common a{
-    display: inline-block;
-    width: fit-content;
-    padding: 0 3px;
+.timeline-item a {
+    color: inherit;
     text-decoration: none;
-    color: grey;
-    background-color: rgb(194, 194, 194);
 }
 
-.form-img{
+.timeline-header {
+    position: relative;
+}
+
+.tineline-heading {
+    font-family: "Space Grotesk", sans-serif;
+    font-size: 2.0rem;
+    padding: 15px 0;
+    color: black;
+    font-weight: 900;
+    display: inline-block;
+}
+
+.timeline-point,
+.timeline-year {
+    position: absolute;
+    top: 50%;
+    left: calc(100% + var(--distant-from-content-to-line));
+}
+
+
+.timeline-point {
+    transform: translate(-50%, -50%);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    box-sizing: content-box;
+    border: solid rgba(207, 246, 212, 1);
+    box-shadow: 0px 0px 0 5px rgba(207, 246, 212, 0.586);
+    background: linear-gradient(to top left, #576663, #6ee1cf);
+    transition: border-width ease 300ms;
+}
+
+.timeline-item:hover .timeline-point {
+    border-width: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(207, 246, 212, 0.586);
+}
+
+
+.timeline-year {
+    transform: translate(var(--distant-from-content-to-line), -50%);
+    width: max-content;
+    font-size: 1.3rem;
+}
+
+.timeline-body {
+    padding-bottom: 40px;
+    position: relative;
+}
+
+.timeline-item:last-of-type .timeline-body::after {
+    display: none;
+}
+
+.timeline-body::after {
+    display: block;
+    content: "";
+    width: 1px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: calc(100% + var(--distant-from-content-to-line));
+    background-color: #ccc;
+}
+
+.timeline-description {
+    line-height: 1.6;
+    margin-bottom: 13px;
+}
+
+.timeline-button {
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 999px;
+    border: none;
+    font-weight: inherit;
+    background-color: #F3F3F3;
+    transition: background-color ease 300ms,
+        color ease 300ms;
+}
+
+.timeline-button:hover {
+    background-color: #A26F5A;
+    color: white;
+}
+
+
+.timeline-image-list {
+    flex-grow: 1;
+    text-align: right;
+}
+
+.timeline-image-item {
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+    width: 80%;
+    aspect-ratio: 1/1;
     position: relative;
 }
 
 
-.img-in{
-    position: absolute;
-    left: calc(50% - 75px);
-    background: white url("https://picsum.photos/150/200") no-repeat;
-    width: 150px;
-    height: 200px;
-}
-
-.img-on {
-    position: absolute;
-    top: calc(50% - 30px);
-    right: calc(50% - 40px);
+.timeline-image-item img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
-.overlay {
+.illustration-info-wapper {
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+    height: 90%;
+    aspect-ratio: 3/4;
+    background: var(--background-img-url) no-repeat center /cover;
+    background-color: black;
     position: absolute;
-    width: 90px; 
-    height: 120px; 
-    top: 10px;
-    left: 5px;
-    background-color: blue;
-    opacity: 0.8;
-    background-size: cover;
+    bottom: 0;
+    left: 0;
+    transform: translate(-50%, 10%);
+    --padding-value: 5%;
 }
+
+.illustration-blue-background {
+    color: white;
+    position: absolute;
+    top: var(--padding-value);
+    left: var(--padding-value);
+    right: var(--padding-value);
+    bottom: var(--padding-value);
+    overflow: hidden;
+}
+
+.illustration-blue-background::after,
+.illustration-blue-background::before {
+    content: "";
+    display: block;
+    position: absolute;
+}
+
+.illustration-blue-background::after {
+    inset: 0;
+    background-color: #4960b4e2;
+}
+
+.illustration-blue-background::before {
+    width: calc(100% + var(--padding-value) *2);
+    height: calc(100% + var(--padding-value) *2);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    filter: blur(10px);
+    background: var(--background-img-url) no-repeat center / cover;
+}
+
+.illustration-description-wrapper {
+    background: var(--background-img-url) no-repeat center /cover;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+
+}
+
+.illustration-description {
+    padding: calc(15px + var(--padding-value));
+}
+
+.illustration-value {
+    font-size: 4.8rem;
+    text-align: center;
+}
+
+.illustration-label {
+    font-size: 1.8rem;
+}
+
+
+/* Hover-transform:  */
+
+.timeline-item-transition {
+    position: relative;
+    left: calc(100% + var(--distant-from-content-to-line));
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
+
+.timeline-item-transition>div {
+    position: relative;
+    left: calc(-100% - var(--distant-from-content-to-line));
+}
+
+.timeline-item-transition .transition-item {
+    transition: transform ease-in-out 300ms;
+}
+
+.timeline-item-transition .timeline-button.transition-item {
+    transition: background-color ease 300ms,
+        color ease 300ms,
+        transform ease-in-out 300ms;
+}
+
+.timeline-item-transition:hover .transition-slide-left {
+    transform: translate(calc(-100% - var(--distant-from-content-to-line)), -50%);
+}
+
+.timeline-item-transition:hover .transition-slide-right {
+    transform: translateX(calc(100% + var(--distant-from-content-to-line) * 2));
+    text-align: left;
+}
+
+/* END */
