--- a/day_11/asset/css/style.css
+++ b/day_11/asset/css/style.css
@@ -18,8 +18,8 @@
 
 .header-grover__logo img{
     display: block;
-    width: 100px;
-    height: 24px;
+    width: 140px;
+    height: 46px;
     margin-left: -8px
 }
 
@@ -30,7 +30,7 @@
 #header-grover__nav li  a{
     display: block;
     margin: 0 8px;
-    font-size: 0.8rem;
+    font-size: 1.6rem;
 }
 #header-grover__nav li a:hover{
     color: var(--color);
@@ -39,7 +39,7 @@
 /* css Search */
 
 .header-grover__search{
-    font-size: 0.9rem;
+    font-size: 1.4rem;
     width: fit-content;
     text-align: center;
     background-color: #fff;
@@ -60,15 +60,15 @@
 
 .header-grover__search input{
     display: inline-block;
-    width: 120px;
-    height: 16px;
+    width: 180px;
+    height: 20px;
     margin: 0 5px 0 2px;
     border: none;
     border-right: 0.5px solid rgb(226, 222, 222);
 }
 
 .header-grover__search input::placeholder{
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .header-grover__search input:focus::placeholder{
@@ -83,27 +83,27 @@
     content: "2";
     color: #fff;
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     background: var(--color-5);
-    top: calc(100% - 30px);
-    left: calc(100% - 7.5px);
+    top: calc(100% - 40px);
+    left: calc(100% - 10px);
     border-radius: 100%;
     box-shadow: rgba(235, 107, 107, 0.35) 0px 5px 15px;
 }
 
 /* Css Grocecy-wrap */
 .grocecy-wrap{
-    font-size: 1rem;
+    font-size: 1.6rem;
     flex-wrap: wrap;
 }
 .grocecy-info__test{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 120px;
-    height: 26px;
-    font-size: 0.9rem;
+    width: 200px;
+    height: 46px;
+    font-size: 1.6rem;
     font-weight: 500;
     border-radius: 40px;
     color: var(--color);
@@ -118,7 +118,7 @@
 }
 
 .grocecy-wrap__info .grocecy-info__title{
-    font-size: 4rem;
+    font-size: 7rem;
     line-height: 1.2;
     margin-bottom: 10px;
 }
@@ -128,7 +128,7 @@
 }
 .grocecy-wrap__info > p {
     opacity: 0.7;
-    width: 30rem;
+    width: 40rem;
     margin-bottom: 20px;
 }
 
@@ -136,12 +136,14 @@
     display: flex;
     justify-content: left;
     align-items: center;
+
 }
 
 
 .grocecy-button__order{
-    width: 11rem;
-    height: 4rem;
+    font-size: 2rem;
+    width: 16rem;
+    height: 6rem;
     background-color: var(--color);
     border: none;
     border-radius: 10px;
@@ -153,6 +155,7 @@
 
 
 .grocecy-button__svg{
+    font-size: 2rem;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -165,8 +168,8 @@
 }
 
 .grocecy-button__svg img{
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     background-color: white;
     box-shadow: rgba(159, 160, 161, 0.2) 0px 8px 24px;
     border-radius: 100%;
@@ -192,12 +195,14 @@
 }
 
 .serve > p {
+    font-size: 1.8rem;
     color: var(--color-5);
 }
 
 .serve-title{
-    font-size: 2.3rem;
-    margin: 5px 250px 30px;
+    font-size: 3.6rem;
+    max-width: 100%;
+    margin: 20px 0 60px;
 }
 
 .serve-container{
@@ -208,21 +213,22 @@
 
 .serve-item{
     position: relative;
-    width: 180px;
-    height: 200px;
+    width: 300px;
+    height: 330px;
 }
 
 
 .serve-item img{
-    width: 70px;
-    height: 40px;
+    width: 90px;
+    height: 60px;
 }
 .serve-item h3{
-    padding: 35px 0px 10px;
+    font-size: 2rem;
+    padding: 60px 0px 10px;
 }
 
 .serve-item p {
-    font-size: 0.8rem;
+    font-size: 1.4rem;
     opacity: 0.8;
 }
 
@@ -230,9 +236,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 30px 30px;
-    width: 180px;
-    height: 200px;
+    padding: 40px 30px 0;
+    width: fit-content;
+    height: 100%;
     background-color: #fff;
     border-radius: 10px;
     z-index: 999;
@@ -242,13 +248,13 @@
     position: relative;
     top: 0;
     left: 13px;
-    width: 180px;
-    height: 210px;
+    width: 315px;
+    height: 350px;
     background-color: var(--color-5);
     border-radius: 10px;
     z-index: 1;
     opacity: 0;
-    transition:all 0.15s linear;
+    transition:all 0.2s linear;
 }
 
 .serve-item:hover  .serve-item__hover{
@@ -261,6 +267,7 @@
     align-items: center;
     justify-content: center;
     padding: 30px 0;
+    font-size: 1.6rem;
 }
 .choose-img img{
     display: block;
@@ -269,18 +276,20 @@
 }
 
 .choose-info{
-    padding: 0 80px;
+    padding: 0 100px;
 }
 .choose-info__text h2{
-    font-size: 2.4rem;
+    font-size: 3.6rem;
     margin:5px 0 10px;
+    font-weight: 700;
 }
 .choose-info__text p:first-child{
     color: var(--color-2);
+    font-weight: 500;
 }
 
 .choose-info__text p:last-child {
-    width: 200px;
+    max-width: 90%;
     text-align: justify;
     opacity: 0.8;
     margin-bottom: 30px;
@@ -289,9 +298,10 @@
 
 
 .choose-info__btn button{
+    font-size: 2rem;
     border: none;
-    width: 11rem;
-    height: 4rem;
+    width: 16rem;
+    height: 6rem;
     background-color: var(--color-5);
     border-radius: 10px;
     color: #fff;
@@ -311,31 +321,34 @@
 .app{
     padding: 40px 64px;
     background-color: var( --bgr2-4);
+    font-size: 1.6rem;
 }
 .app-img img{
-    width: 165px;
+    width: 200px;
     height: auto;
 }
 
 .app-text{
-    width: 30rem;
+    width: 50rem;
     margin-bottom: 40px;
 }
 
 .app-text p:first-child{
     color: var(--color-5);
+    font-weight: 500;
 }
 
 .app-text h2{
-    font-size: 2.4rem;
+    font-size: 3.6rem;
     margin:5px 0 10px;
 }
 .app-text p:last-child{
     opacity: 0.6;
+    max-width: 90%;
 }
 .app-btn{
     display: flex;
-    gap: 0 10px;
+    gap: 0 15px;
 }
 
 .app-btn .btn__font{
@@ -343,10 +356,10 @@
     justify-content: center;
     align-items: center;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 2rem;
     gap: 0 10px;
-    width: 11rem;
-    height: 4rem;
+    width: 16rem;
+    height: 6rem;
     border: 0.5px solid grey;
     background-color: var(--bgr2-4);
     border-radius: 6px;
@@ -359,12 +372,15 @@
 } 
 
 /* Css footer */
+.footer{
+    font-size: 1.6rem;
+}
 
 .footer-grover__container{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 40px 64px;
+    padding: 100px 64px;
     column-gap: 60px;
 }
 
@@ -377,24 +393,23 @@
     display: block;
     list-style-type: none;
     opacity: 0.8;
-    padding: 5px 0;
+    padding: 8px 0;
 }
 
 .footer a{
     color: var(--color-4);
     text-decoration: none;
-    font-size: 0.9rem;
 }
 
 .footer-grover__info img{
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    height: 60px;
     display: inline-block;
-    margin-top: -8px;
+    margin-top: -20px;
 }
 .footer-grover__info p{
-    font-size: 1.6rem;
     font-weight: 500;
+    padding-bottom: 30px;
 }
 .footer-grover__end a{
     display: inline-block;
